# mhtools

./: CMakeLists.txt
src/cpp/: kirk_cypher.cpp  main.cpp
src/cpp/include/: kirk_cypher.h
tests/: CMakeLists.txt  test_kirk.cpp
